--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
   "PyMuPDF>=1.23.0",
   "Pillow>=10.0.0",
   "python-pptx>=0.6.23",
+  "python-dotenv>=1.0.1",
   "httpx>=0.27.0",
   "reportlab>=4.2.0",
 ]
