已支持用 Vertex 的 JSON 凭据文件自动换取 access token

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ dependencies = [
   "python-pptx>=0.6.23",
   "python-dotenv>=1.0.1",
   "httpx>=0.27.0",
+  "google-auth>=2.29.0",
   "reportlab>=4.2.0",
 ]
 
