--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,8 +18,9 @@ dependencies = [
   "PyMuPDF>=1.23.0",
   "Pillow>=10.0.0",
   "python-pptx>=0.6.23",
+  "anyio>=4.0.0",
   "python-dotenv>=1.0.1",
-  "httpx>=0.27.0",
+  "google-genai>=0.6.0",
   "google-auth>=2.29.0",
   "reportlab>=4.2.0",
 ]
@@ -36,6 +37,7 @@ Homepage = "https://github.com/your-org/notebooklm-slide-refiner"
 [tool.pytest.ini_options]
 addopts = "-q"
 testpaths = ["tests"]
+pythonpath = ["."]
 
 [tool.ruff]
 line-length = 100
